--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -29,9 +29,6 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.0.0'
     testCompile 'junit:junit:4.12'
-    compile 'com.github.thunderrise:android-animations:-SNAPSHOT'
+    compile project(':animations')
 }
 
-repositories {
-    maven { url "https://jitpack.io" }
-}
